force-app/src/objects/OrderApi__Credit_Memo_Line__c.object
<CustomObject>
    <description>Credit Memo Lines track revenue used from Credit Memos against invoices.</description>
    <fields>
        <fullName>OrderApi__Amount__c</fullName>
        <description>**System Calculated/Override** Total over payments received.</description>
        <inlineHelpText>**System Calculated/Override** Total over payments received.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** The account to use for crediting revenue applied against an Invoice. Default value is the linked Invoice&apos;s A/R account.</description>
        <inlineHelpText>**System Calculated/Override** The account to use for crediting revenue applied against an Invoice. Default value is the linked Invoice&apos;s A/R account.</inlineHelpText>
        <label>Liability Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Credit Memo Lines</relationshipLabel>
        <relationshipName>Credit_Memo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Credit_Memo__c</fullName>
        <description>**Required** Link to the Credit Memo being used by the invoice.</description>
        <inlineHelpText>**Required** Link to the Credit Memo being used by the invoice.</inlineHelpText>
        <label>Credit Memo</label>
        <referenceTo>OrderApi__Credit_Memo__c</referenceTo>
        <relationshipName>Credit_Memo_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice Line where the OverPayment is made.</description>
        <inlineHelpText>Invoice Line where the OverPayment is made.</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>OrderApi__Invoice_Line__c</referenceTo>
        <relationshipLabel>Credit Memo Lines</relationshipLabel>
        <relationshipName>Credit_Memo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Invoice where the OverPayment is made.</description>
        <inlineHelpText>Invoice where the OverPayment is made.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>OrderApi__Invoice__c</referenceTo>
        <relationshipLabel>Credit Memo Lines</relationshipLabel>
        <relationshipName>Credit_Memo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Drafted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the credit memo is in a draft status.</description>
        <inlineHelpText>When checked, the credit memo is in a draft status.</inlineHelpText>
        <label>Is Drafted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the credit memo creates transactions.</description>
        <inlineHelpText>When checked, the credit memo creates transactions.</inlineHelpText>
        <label>Is Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to related Sales Order Line.</description>
        <inlineHelpText>**System Calculated** Link to related Sales Order Line.</inlineHelpText>
        <label>Sales Order Line</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Credit Memo Lines</relationshipLabel>
        <relationshipName>Credit_Memo_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Status__c</fullName>
        <description>**System Calculated/Override** Primary indicator of the credit memo&apos;s current status. Default value is &quot;Draft&quot;.</description>
        <inlineHelpText>**System Calculated/Override** Primary indicator of the credit memo&apos;s current status. Default value is &quot;Draft&quot;.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit Memo Line</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Credit_Memo__c</columns>
        <columns>OrderApi__Invoice__c</columns>
        <columns>OrderApi__Amount__c</columns>
        <columns>OrderApi__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Credit Memo Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>